fix(ButtonGroup): Disable exit animation to prevent flicker (#421)
Reset base transition-duration to disable exit animation on hover/focus to prevent border flicker when moving between buttons. Added back transition-duration for hover/focus to enable enter animation.

--- a/src/button/button-group.scss
+++ b/src/button/button-group.scss
@@ -31,6 +31,13 @@
         z-index: -1;
       }
 
+      transition-duration: 0ms; // disable exit animation to avoid border flicker
+
+      &:hover,
+      &:focus {
+        transition-duration: $iui-speed-fast; // re-enable enter animation
+      }
+
       // Adds stripe above active button
       &.iui-active {
         &::after {
